--- a/index.html
+++ b/index.html
@@ -11,16 +11,77 @@
 
 <body>
     <h1>PRIMA SEZIONE</h1>
-    <section>
-        <p> qui andranno 4 cards di 4 canzoni JAVASCRIPT??????</p>
+    <section class="container">
+
+        <div class="row" id="spazio">
+
+
+
+
+
+
+
+        </div>
+
     </section>
     <h1>SECONDA SEZIONE</h1>
     <section>
         <p>canzone preferita (UNA SOLA JAVASCRIPT???????????????????????)</p>
+        <section class="container" id="container2">
+
+            <div class="row" id="spazio2">
+
+
+
+
+
+
+
+            </div>
+
+        </section>
     </section>
     <h1>TERZA SEZIONE</h1>
     <section>
         <p> CAROSELLO ALBUM</p>
+
+
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="https://placekitten.com/200/300" class="d-block " alt="...">
+
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="https://placekitten.com/200/300" class="d-block " alt="...">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+
+
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placekitten.com/200/300" class="d-block " alt="...">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
     </section>
     <h1>SEZIONE BOTTONI</h1>
     <section>
