ok first button, sort not ok

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
     <h1>SEZIONE BOTTONI</h1>
     <section>
         <p>BOTTONI???</p>
-        <button type="button">trova l'album più vecchio</button>
+
+        <div class="d-none" id="alert"></div>
+        <button type="button" class="btn btn-primary" onclick="toggleDiv()">Album in ordine di
+            Rank</button>
+
+
         <button type="button">clicca qui se vuoi vedere l'alert con tutte le canzoni della libreria</button>
     </section>
 
