--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
         <p>BOTTONI???</p>
 
-        <div class="d-none" id="alert"></div>
+        <div class="d-none" role="alert" id="alert"></div>
         <button type="button" class="btn btn-primary" onclick="toggleDiv()">Album in ordine di
             Rank</button>
 
