--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -66,9 +67,9 @@
     </section>
     <h1>SEZIONE BOTTONI</h1>
     <section>
-        <p>BOTTONI???</p>
 
-        <div class="d-none" role="alert" id="alert"></div>
+
+        <div class=" alertSong" role="alert" id="alert"></div>
         <button type="button" class="btn btn-primary" onclick="toggleDiv()">Album in ordine di
             Rank</button>
 
